--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                         <div class="w-16 h-16 sm:w-20 sm:h-20 lg:w-24 lg:h-24 rounded-2xl lg:rounded-3xl bg-gradient-to-br from-amber-500 to-orange-500 flex items-center justify-center text-white mb-4 lg:mb-6 group-hover:scale-110 group-hover:rotate-6 transition-all duration-300 shadow-xl mx-auto lg:mx-0">
                             <i data-lucide="message-circle" class="w-8 h-8 sm:w-10 sm:h-10 lg:w-12 lg:h-12"></i>
                         </div>
-                        <h3 class="text-base sm:text-lg lg:text-xl font-bold text-gray-900 group-hover:text-white transition-colors duration-300 leading-tight text-center lg:text-left">Kenapa Harus Yanoshi</h3>
+                        <h3 class="text-base sm:text-lg lg:text-xl font-bold text-gray-900 group-hover:text-white transition-colors duration-300 leading-tight text-center lg:text-left">Ketentuan Umum Jastip</h3>
                     </div>
                 </div>
 
@@ -1791,6 +1791,7 @@
     </script>
 </body>
 </html>
+
 
 
 
