--- a/index.html
+++ b/index.html
@@ -982,18 +982,18 @@
 			        
 			        <div class="mb-3">
 			            <strong class="text-red-700">⛔ Barang Terlarang:</strong>
-			            <p class="mb-2">Kami <strong>tidak menerima</strong> pengiriman barang yang dilarang oleh kebijakan maskapai, peraturan Bea Cukai, atau hukum negara tujuan (Indonesia/Jepang)[cite: 25].</p>
+			            <p class="mb-2">Kami <strong>tidak menerima</strong> pengiriman barang yang dilarang oleh kebijakan maskapai, peraturan Bea Cukai, atau hukum negara tujuan (Indonesia/Jepang).</p>
 			            <p class="text-xs font-semibold">Konsekuensi jika tetap dikirim:</p>
 			            <ul class="list-disc list-inside text-xs mb-3 pl-2">
-			                <li>Barang diserahkan ke tim Jastip (disposisi)[cite: 27].</li>
-			                <li>Dikembalikan ke alamat awal (biaya ditanggung pelanggan)[cite: 28].</li>
+			                <li>Barang diserahkan kepada tim Jastip (disposisi).</li>
+			                <li>Dikembalikan ke alamat pengirim/penerima awal (biaya ditanggung pelanggan).</li>
 			            </ul>
 			        </div>
 			
 			        <div>
 			            <strong class="text-orange-700">⚠️ Barang Berisiko (Gambling):</strong>
 			            <p class="text-xs">
-			                Untuk barang yang berisiko tertahan Bea Cukai/Imigrasi, kami akan berupaya membawanya. Namun, jika <strong>tertahan atau disita</strong>, hal ini berada di <strong>luar tanggung jawab</strong> kami[cite: 29, 30].
+			                Untuk barang yang memiliki risiko tertahan Bea Cukai/Imigrasi, kami akan berupaya membawanya. Namun, jika barang tersebut <strong>tertahan atau disita</strong>, hal ini berada di <strong>luar tanggung jawab</strong> dan kemampuan kami.
 			            </p>
 			        </div>
 			    </div>
@@ -1001,55 +1001,58 @@
 			    <div class="mb-6 bg-yellow-50 p-4 rounded-lg border border-yellow-100">
 			        <h4 class="font-bold text-yellow-800 mb-2">2. Pembatalan Pesanan</h4>
 			        <ul class="list-disc list-inside space-y-2">
-			            <li><strong>Syarat:</strong> Hanya dapat dilakukan jika barang <strong>belum dibelanjakan</strong> atau <strong>belum dalam proses pengiriman</strong>[cite: 32].</li>
-			            <li><strong>Denda:</strong> Jika membatalkan sebelum barang terkirim/dibawa, dikenakan denda sebesar <strong>Rp150.000,00</strong>.</li>
-			            <li><strong>Pengembalian:</strong> Barang akan dikirim kembali ke alamat pengirim (biaya kirim ditanggung pelanggan)[cite: 34].</li>
+			            <li><strong>Batasan Pembatalan:</strong> Pembatalan pesanan hanya dapat dilakukan jika barang <strong>belum dibelanjakan</strong> atau <strong>belum dalam proses pengiriman</strong>.</li>
+			            <li><strong>Denda Pembatalan:</strong> Jika pelanggan membatalkan pesanan sebelum barang terkirim/dibawa, akan dikenakan denda pembatalan sebesar <strong>Rp150.000,00</strong>.</li>
+			            <li><strong>Pengembalian Barang:</strong> Setelah pembatalan, pihak Jastip akan mengirimkan kembali barang milik pelanggan ke alamat pengirim (biaya kirim ditanggung oleh pelanggan).</li>
 			        </ul>
 			    </div>
 			
 			    <div class="mb-6">
 			        <h4 class="font-bold text-gray-900 mb-2">3. Biaya Bea Cukai (Customs Tax)</h4>
 			        <div class="pl-4 border-l-4 border-blue-500 bg-gray-50 p-3">
-			            <p class="mb-2">Biaya layanan <strong>TIDAK TERMASUK</strong> biaya Bea Cukai (pajak impor/ekspor).</p>
+			            <p class="mb-2">Biaya layanan yang kami kenakan <strong>TIDAK TERMASUK</strong> biaya Bea Cukai (pajak impor/ekspor).</p>
 			            <ul class="list-disc list-inside text-xs text-gray-600">
-			                <li>Biaya tambahan hanya dikenakan <strong>jika</strong> paket kena pajak oleh pihak berwenang[cite: 37].</li>
-			                <li>Perhitungan dilakukan secara proporsional berdasarkan nilai/berat barang pada saat keberangkatan[cite: 38].</li>
+			                <li>Tambahan biaya Bea Cukai hanya akan dikenakan <strong>jika dan hanya jika</strong> paket dikenakan pajak oleh pihak berwenang.</li>
+			                <li>Biaya Bea Cukai yang dikenakan akan dihitung secara proporsional berdasarkan total nilai/berat semua barang bawaan kami pada saat keberangkatan yang bersangkutan.</li>
 			            </ul>
 			        </div>
 			    </div>
 			
 			    <div class="mb-6">
 			        <h4 class="font-bold text-gray-900 mb-2">4. Ketentuan Pembayaran</h4>
-			        <p class="mb-2">Kami menerima pembayaran dalam mata uang <strong>Rupiah (IDR)</strong> dan <strong>Yen (JPY)</strong>[cite: 40].</p>
-			        <div class="grid grid-cols-1 md:grid-cols-2 gap-2 text-xs font-semibold">
-			            <div class="bg-blue-50 p-2 rounded text-center text-blue-800">
-			                Transfer JPY: Yucho Bank [cite: 42]
+			        <p class="mb-2">Kami menerima pembayaran dalam mata uang <strong>Rupiah (IDR)</strong> dan <strong>Yen (JPY)</strong>. Untuk kenyamanan pelanggan di Indonesia, transaksi internasional dapat difasilitasi dalam mata uang Rupiah.</p>
+			        <div class="grid grid-cols-1 md:grid-cols-2 gap-2 text-xs font-semibold mt-3">
+			            <div class="bg-blue-50 p-2 rounded text-center text-blue-800 border border-blue-100">
+			                Transfer JPY: Yucho Bank
 			            </div>
-			            <div class="bg-blue-50 p-2 rounded text-center text-blue-800">
-			                Transfer IDR: Bank Mandiri [cite: 42]
+			            <div class="bg-blue-50 p-2 rounded text-center text-blue-800 border border-blue-100">
+			                Transfer IDR: Bank Mandiri
 			            </div>
 			        </div>
 			    </div>
 			
 			    <div class="mb-4 bg-green-50 p-4 rounded-lg border border-green-100">
-			        <h4 class="font-bold text-green-800 mb-2">5. Jaminan Kehilangan & Kerusakan</h4>
+			        <h4 class="font-bold text-green-800 mb-2">5. Jaminan Kehilangan & Kerusakan Barang</h4>
 			        
 			        <p class="mb-3 text-xs">
-			            Kami menerapkan konsep <strong>Free on Board (FoB)</strong>. Kami bertanggung jawab penuh jika barang hilang seutuhnya selama proses kirim Jepang-Indonesia (kesalahan murni tim Yanoshi)[cite: 44].
+			            Kami menjamin keamanan dan sampainya barang pesanan ke Indonesia dengan konsep <strong>Free on Board (FoB)</strong>, yang berarti kami bertanggung jawab penuh jika barang hilang seutuhnya selama proses kirim dari Jepang ke Indonesia yang murni merupakan kesalahan tim Yanoshi Jastip bukan kesalahan dari pihak eksternal.
 			        </p>
 			
 			        <div class="bg-white p-3 rounded border border-green-200 mb-3">
-			            <strong class="text-green-700 block mb-1">Jika Barang Tidak Tiba Setelah 2 Bulan:</strong>
+			            <strong class="text-green-700 block mb-1">Penanganan Item Hilang (Setelah 2 Bulan):</strong>
+			            <p class="text-xs text-gray-600 mb-1">Jika barang pesanan Anda tidak tiba setelah 2 bulan:</p>
 			            <ul class="list-decimal list-inside text-xs text-gray-600">
-			                <li>Dana dihitung sebagai deposit untuk pembelian item lain, ATAU [cite: 48]</li>
-			                <li>Dana di-refund maksimal <strong>7 hari kerja</strong> setelah konfirmasi[cite: 49].</li>
+			                <li>Dana keseluruhan dapat dihitung sebagai deposit untuk pembelian item lain dengan harga setara.</li>
+			                <li>Atau, dana akan di-refund maksimal <strong>7 hari kerja</strong> setelah konfirmasi refund.</li>
 			            </ul>
 			        </div>
 			
 			        <p class="text-xs italic text-gray-500">
-			            *Disarankan menggunakan asuransi ekspedisi domestik untuk perlindungan paket yang lebih optimal[cite: 45].
+			            *Kami sangat menyarankan agar customer menggunakan fitur asuransi yang disediakan oleh pihak ekspedisi domestik untuk perlindungan paket yang lebih optimal.
 			        </p>
 			    </div>
+			
+			</div>
 			
 			</div>
             <div class="p-4 border-t bg-gray-50 rounded-b-2xl flex justify-end">
@@ -1791,6 +1794,7 @@
     </script>
 </body>
 </html>
+
 
 
 
