--- a/index.html
+++ b/index.html
@@ -1094,10 +1094,11 @@
             <div class="modal-body p-6 text-gray-700 h-[60vh] overflow-y-auto text-sm">
     
 			    <div class="mb-6 border-b pb-4">
-			        <h3 class="font-bold text-lg text-gray-900 mb-2">Biaya Kirim Handcarry (ID ⇄ JP)</h3>
+			        <h3 class="font-bold text-lg text-gray-900 mb-2">Biaya Kirim Handcarry (ID > JP) & (JP > ID)</h3>
 			        <div class="bg-blue-50 p-4 rounded-lg border border-blue-100">
-			            <p class="text-2xl font-bold text-blue-700 mb-1">1.500 Yen / Kg</p>
-			            <p class="text-xs text-gray-500 mb-3">Berlaku untuk rute Indonesia - Jepang & Jepang - Indonesia</p>
+			            <p class="text-2xl font-bold text-blue-700 mb-1">ID > JP : 1.600 Yen / Kg</p>
+						<p class="text-2xl font-bold text-blue-700 mb-1">JP > ID : 1.700 Yen / Kg</p>
+			            <p class="text-xs text-gray-500 mb-3">Payment dapat menggunakan Yen Jepang & Rupiah Indonesia</p>
 			            
 			            <p class="font-semibold mb-1">Hanya untuk kategori:</p>
 			            <ul class="list-disc list-inside mb-3 text-gray-700">
@@ -1793,6 +1794,7 @@
     </script>
 </body>
 </html>
+
 
 
 
